syntax = "proto3";
package serverservices;

// gRPC related messages
service ServerServices {
    rpc ServerConfig (ConfigInfo) returns (StringMessage) {
    }
    rpc ReturnMatches (StringMessage) returns (stream StringMessage) {
    }
    rpc CloseServer (CloseMessage) returns (StringMessage) {
    }
    rpc ActMembership (StringArray) returns (StringMessage) {
    }
}
message ConfigInfo {
    int32 log_level = 1;
    int32 VMIndex = 2;
}

message StringMessage {
    string mesg = 1;
}

message StringArray {
    repeated string msgs = 1;
}

message CloseMessage {
    int32 closeType = 1;
}

// Failure detector related messages

message DetectorMessage {
    string Header = 1;
    string Addr = 2;
    int32 SessNUm = 3;
    int32 TTL = 4;
}

message Member {
    string Addr = 1;
    int32 SessNum = 2;
}

message FullMembershipList {
    repeated Member List = 1;
}

message UDPMessage {
    string MessageType = 1;
    DetectorMessage Dm = 2;
    FullMembershipList Fm = 3;
}
